syntax = "proto3";
package fits_proto;

import "defs.proto";

message FileInfoRequest {
    string uuid = 1; 
    string directory = 2;
    string file = 3;
    string hdu = 4;
  }
  
  message FileInfoResponse {
      bool success = 1;
      string message = 2;
      FileInfo file_info = 3;
      FileInfoExtended file_info_extended = 4;
  }
  
